--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 	<section>
 		<div id="video">
-			<video src="video/photo_gal.mp4" onClick="pauseToggle()" id="vid" type="video/mp4" width="700" height="500" autoplay controls>
+			<video src="video/photo_gal.mp4" onClick="pauseToggle()" id="vid" type="video/mp4" width="700" height="500" autoplay>
 				video is not supported!
 			</video>
 		
