--- a/pins.html
+++ b/pins.html
@@ -51,8 +51,8 @@
 	</header>
 
 	<section>
-		<h1>I love to make and collect hat pins for/from festivals!<br>
-		I have been to the following festivals:</h1>
+		<h2>I love to make and collect hat pins for/from festivals!<br>
+		I have been to the following festivals:</h2>
 
 		<div class="map_container">
 			<a class="dot" style="top:129px; left:416px;" state="NY" city="catskill"></a> <!--catskill chill -->
@@ -85,8 +85,8 @@
 			<div class="city_detail" id="catskill">
 				<img class="city_photo" src="images/cities/chill.jpg" alt="catskill" width="75" height="75" />
 				<div class="city_info">
-					<h2>Catskill Chill</h2>
-					<h3>Hancock, NY</h3>
+					<h2>Catskill Chill<br>
+					Hancock, NY</h2>
 					<p>Incredibly beautiful venue with carefully curated national and local bands and live acts. The camping
 					includes beautiful scenery within a historic campground by a beautiful lake! Some bands that have
 					headlined Catskill Chill includes Umphreys Mcgee, Yonder Mountain String Band, Moe., and the Meter Men</p>
@@ -98,8 +98,8 @@
 			<div class="city_detail" id="thornton">
 				<img class="city_photo" src="images/cities/allgood.jpg" alt="thornton" width="75" height="75" />
 				<div class="city_info">
-					<h2>All Good Festival</h2>
-					<h3>Thornton, Oh</h3>
+					<h2>All Good Festival<br>
+					Thornton, Oh</h2>
 					<p>An amazing festival with about 50,000 in attendance each year. Lineup each year includes
 					Grateful Dead and jam band related band and acts. Some prevous years have included Further,
 					Bob Weir, Phil Lesh, Dark Star Orchestra, STS9, and Pretty Lights</p>
@@ -110,8 +110,8 @@
 			<div class="city_detail" id="sterling">
 				<img class="city_photo" src="images/cities/sterling.jpg" alt="sterling" width="75" height="75" />
 				<div class="city_info">
-					<h2>Sterling Stage</h2>
-					<h3>Sterling, NY</h3>
+					<h2>Sterling Stage<br>
+					Sterling, NY</h2>
 					<p>A small festival in the heart of Oswego county in upstate, NY. Featuring local bands and at least one national act.</p>
 				</div>
 			</div>
@@ -120,8 +120,8 @@
 			<div class="city_detail" id="turin">
 				<img class="city_photo" src="images/cities/moe.jpg" alt="turin" width="75" height="75" />
 				<div class="city_info">
-					<h2>Moe.Down</h2>
-					<h3>Turin, NY</h3>
+					<h2>Moe.Down<br>
+					Turin, NY</h2>
 					<p>Festival by the jam band Moe. This festival is located in Turin, NY and features at least 6 sets from Moe.
 					plus other awesome jam bands.</p>
 				</div>
@@ -131,8 +131,8 @@
 			<div class="city_detail" id="mariaville">
 				<img class="city_photo" src="images/cities/bisco.jpg" alt="mariaville" width="75" height="75" />
 				<div class="city_info">
-					<h2>Camp Bisco</h2>
-					<h3>Mariaville, NY</h3>
+					<h2>Camp Bisco<br>
+					Mariaville, NY</h2>
 					<p>Festival brought to you by the jamtronica band the Disco Biscuits. The festival includes many electronic music acts and jam bands. The Disco Biscuits play at least 6 sets throughout the festival. Recently, the festival has moved to 
 					Montage Mountain in PA.</p>
 				</div>
@@ -142,8 +142,8 @@
 			<div class="city_detail" id="laurens">
 				<img class="city_photo" src="images/cities/laughing.jpg" alt="laurens" width="75" height="75" />
 				<div class="city_info">
-					<h2>The Laughing Academy</h2>
-					<h3>Laurens, NY</h3>
+					<h2>The Laughing Academy<br>
+					Laurens, NY</h2>
 					<p>A small festival put on my local area DJ. The festival includes several bands and several djs all local.</p>
 				</div>
 				<div class="clear_both"></div>
