--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-<!-- Project WIA JULY 2015 ASHLEY KODYA-->
+
+<!-- contact.html -->
 
 <!DOCTYPE html>
 <html>
@@ -7,25 +8,26 @@
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" />
-	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.structure.css" /> 
-	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> 
+	<!-- <link rel="stylesheet" type="text/css" href="css/jquery-ui.structure.css" /> 
+	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> -->
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
+
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<script type="text/javascript" src="js/video.js"></script>
+	<script type="text/javascript" src="js/gradient.js"></script>
 
 	<!-- jquery code -->
 	<script>
   		$(function() {
     	$( "#menu" ).menu();
   		});
-
   		
   	</script>
 
 </head>
 <body>
+
 	<header>
 
 		<ul id="menu">
@@ -43,20 +45,20 @@
   			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 
-		<a href="index.html"><img id="logo" src="images/koalalogo.png"></a><br>
+		<a href="index.html"><img id="logo" src="images/koalalogo.png"></a>
 		<article id="shopbox">
 			<a href="http://www.etsy.com/shop/koalakrtnz">Shop collection now ></a>
 		</article>
+
 	</header>
 
 	<section>
-		<div id="video">
-			<video src="video/photo_gal.mp4" onClick="pauseToggle()" id="vid" type="video/mp4" width="700" height="500" autoplay>
-				video is not supported!
-			</video>
 		
-		</div>
+		<a href="http://www.facebook.com/koalakreationsdesigns"><h2>add us on Facebook</h2></a>
+		
+
 	</section>
+
 
 
 </body>
