--- a/pins.html
+++ b/pins.html
@@ -50,7 +50,7 @@
 
 	</header>
 
-	<section>
+	<section id="map_container">
 		<h2>I love to make and collect hat pins for/from festivals!<br>
 		I have been to the following festivals:</h2>
 
