--- a/necklaces.html
+++ b/necklaces.html
@@ -53,7 +53,11 @@
 
 	</header>
 
+
+
 	<section id="canvas">
+
+		<h3> Necklaces By Ashley </h3><br>
 
 		<img id="img1" src="images/necklace.png" width="150" height="150">
 		<canvas id="Canvas1">
