--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
-
-<!-- contact.html -->
+<!-- contact.html ASHLEY M. KODYA THE PROJECT WIA w/ Eric Silvay July 2015 Full Sail University -->
 
 <!DOCTYPE html>
 <html>
@@ -12,7 +11,7 @@
 	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> -->
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
-
+	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/gradient.js"></script>
