--- a/earrings.html
+++ b/earrings.html
@@ -1,5 +1,4 @@
-
-<!-- necklaces.html ASHLEY M. KODYA THE PROJECT WIA w/ Eric Silvay July 2015 Full Sail University -->
+<!-- earrings.html ASHLEY M. KODYA THE PROJECT WIA w/ Eric Silvay July 2015 Full Sail University earrings.html -->
 
 <!DOCTYPE html>
 <html>
@@ -12,29 +11,24 @@
 	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> 
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
-
-	
+	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<script type="text/javascript" src="js/animation.js"></script>
+		<script type="text/javascript" src="js/images.js"></script>
 
-  		<!-- jquery code -->
+
+	<!-- jquery code -->
 	<script>
   		$(function() {
     	$( "#menu" ).menu();
   		});
 
+  		
   	</script>
-
-  	<script type="text/javascript" src="js/modernizr.js"></script>
 
 </head>
 <body>
-
 	<header>
-		<article id="shopbox">
-			<a href="http://www.etsy.com/shop/koalakrtnz">Shop collection now ></a>
-		</article>
 
 		<ul id="menu">
 			<li><a href="earrings.html">Earrings</a>
@@ -51,47 +45,30 @@
   			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 
-		<a href="index.html"><img id="logo" src="images/koalalogo.png"></a>
-		
-
+		<a href="index.html"><img id="logo" src="images/koalalogo.png"></a><br>
+		<article id="shopbox">
+			<a href="http://www.etsy.com/shop/koalakrtnz">Shop collection now ></a>
+		</article>
 	</header>
 
+	<section class="canvas2">
 
+				<h1>Earrings coming soon!</h1>
 
-	<section id="canvas">
-
-		<h3>All Original work by Ashley</h3><br>
-
-		<img id="img1" src="images/necklace.png" width="150" height="150">
-		<canvas id="Canvas1">
+		<canvas id="Canvas2" width="800" height="500">
 			Your browser does not support canvas
 		</canvas>
-
-		<img id="img1" src="images/necklace.png" width="150" height="150"><br>
-
-		<img id="img2" src="images/necklace2.png" width="150" height="150">
-
-		<img id="img2" src="images/necklace3.png" width="150" height="150">
-		
-
-		<img id="img2" src="images/necklace2.png" width="150" height="150">
-
-		<img id="img2" src="images/necklace5.png" width="150" height="150"> <br>
-
-		<img id="img2" src="images/necklace6.png" width="150" height="150">
-
-		<img id="img2" src="images/necklace6.png" width="150" height="150">
-
-		<img id="img2" src="images/necklace6.png" width="150" height="150">
-
-		<img id="img2" src="images/necklace6.png" width="150" height="150">
+		<img id="img2" src="images/earrings1.png" width="800" height="600" style="display:none">
 
 
 		
-
+		
+		
+	
 	</section>
-<script type-"text/javascript" src="js/modernizrcheck.js"></script>
 
+
+	
 
 </body>
 </html>
