--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Project WIA JULY 2015 ASHLEY KODYA-->
+<!-- index.html ASHLEY M. KODYA THE PROJECT WIA w/ Eric Silvay July 2015 Full Sail University -->
 
 <!DOCTYPE html>
 <html>
@@ -11,6 +11,7 @@
 	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> 
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
+	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/video.js"></script>
@@ -52,6 +53,7 @@
 	<section>
 		<div id="video">
 			<video src="video/photo_gal.mp4" onClick="pauseToggle()" id="vid" type="video/mp4" width="700" height="500" autoplay>
+				<source src="video.mp4" type="video/mp4" />
 				video is not supported!
 			</video>
 		
