--- a/pins.html
+++ b/pins.html
@@ -1,3 +1,5 @@
+<!-- pins.html ASHLEY M. KODYA THE PROJECT WIA w/ Eric Silvay July 2015 Full Sail University -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,10 +11,9 @@
 	 <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css" /> -->
 	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
-
+	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<script type="text/javascript" src="js/lbox.js"></script>
 	<script type="text/javascript" src="js/map.js"></script>
 
 	<!-- jquery code -->
